(Frontend) Fix 3 Dot Button Display Overlap bug

--- a/src/app/user/pages/chat/read-chat/chat-list/header/header.component.css
+++ b/src/app/user/pages/chat/read-chat/chat-list/header/header.component.css
@@ -73,6 +73,7 @@
     z-index: -1;
     max-height: 0;
     padding: 0;
+    display: none;
 }
   
   .dropdown-container:focus {
@@ -83,5 +84,5 @@
     opacity: 1;
     z-index: 100;
     max-height: 100vh;
-    
+    display: block;
   }
